@@ -1,0 +1,6 @@
+class NumericLiteral:
+	def __init__(self, value):
+		self.value = value
+	
+	def __repr__(self):
+		return f"NumericLiteral ({self.value})"
