@@ -1,5 +1,5 @@
 class Token:
-	def __init__(self, type, value):
+	def __init__(self, type, value=None):
 		self.type = type
 		self.value = value
 	
